Added JSON to resume pdf converter

--- a/output/ALLEN_GU_CV.tex
+++ b/output/ALLEN_GU_CV.tex
@@ -131,9 +131,9 @@
         \normalsize
         \mbox{\hrefWithoutArrow{mailto:allengu01@berkeley.edu}{{\small\faEnvelope[regular]}\hspace{0.13cm}allengu01@berkeley.edu}}
         \hspace{0.5cm}
-        \mbox{\hrefWithoutArrow{http://allengu01.github.io/}{{\small\faLink}\hspace{0.13cm}http:allengu01.github.io}}
+        \mbox{\hrefWithoutArrow{https://allengu01.github.io/}{{\small\faLink}\hspace{0.13cm}allengu01.github.io}}
         \hspace{0.5cm}
-        \mbox{\hrefWithoutArrow{https://www.github.com/http://github.com/allengu01}{{\small\faGithub}\hspace{0.13cm}http://github.com/allengu01}}
+        \mbox{\hrefWithoutArrow{https://www.github.com/https://github.com/allengu01}{{\small\faGithub}\hspace{0.13cm}https://github.com/allengu01}}
         \hspace{0.5cm}
         \mbox{\hrefWithoutArrow{https://www.linkedin.com/in/linkedin.com/in/allengu01}{{\small\faLinkedinIn}\hspace{0.13cm}linkedin.com/in/allengu01}}
     \end{header}
@@ -165,10 +165,10 @@
                 \item Created automation tooling for development workflow and continuous integration through a Go AWS Lambda bot. 
                 \item Led the migration of a repository with 100+ developers to integrate the bot by defining and coding requested features. 
                 \item Improved observability through Cloudwatch metric monitoring and Prometheus alarming, deployed on AWS EKS cluster. 
-                \item Built AWS, Prometheus, and Kubernetes architecture with infrastructure as code (IaC) tool Terraform. \hspace*{-0.2cm}
+                \item Built AWS, Prometheus, and Kubernetes architecture with infrastructure as code (IaC). \hspace*{-0.2cm}
             \end{highlights}
         &
-            2023 to 2024
+            2023 to present
         \end{tabularx}
 
         \vspace{0.12 cm}
@@ -214,17 +214,6 @@
 
     \section{Projects}
     
-        \begin{tabularx}{\textwidth-0.4 cm-0.13cm}{K{0.2 cm}}
-            \textbf{Gitlet Java | Java}
-            \vspace{0.10 cm}
-            \begin{highlights}
-                \item Engineered a custom version control system based on Git. 
-                \item Supported basic methods (init, add, remove, commit, status, log), branching, and remote repositories. 
-                \item Implemented search algorithms and data structures to merge branches and track files across commits. \hspace*{-0.2cm}
-            \end{highlights}
-        \end{tabularx}
-
-        \vspace{0.12 cm}
         \begin{tabularx}{\textwidth-0.4 cm-0.13cm}{K{0.2 cm}}
             \textbf{Spotify Collab | HTML, CSS, Javascript, React.js, Node.js, PostgreSQL, SocketIO}
             \vspace{0.10 cm}
